# Mentalytics

./: README.md  pyproject.toml
app/: app.py
data/: proxy_dataset.json
